--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A system to allow reporting of maintenance and repairs request, to track the maintenance process and escalate unusual delays.",
   "main": "main.js",
   "scripts": {
-    "test": "jasmine tests/tests.js"
+    "test": "jasmine tests/tests.js",
+    "start": "node main.js"
   },
   "repository": {
     "type": "git",
@@ -22,10 +23,11 @@
   "homepage": "https://github.com/COOPROTON/bc-18-maintenance-tracker#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "dotenv": "^4.0.0",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
-    "express-handlebars": "^3.0.0",
     "firebase": "^3.6.5",
-    "jasmine": "^2.5.3"
+    "jasmine": "^2.5.3",
+    "method-override": "^2.3.7"
   }
 }
