--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.14.0",
     "firebase": "^3.6.5",
     "jasmine": "^2.5.3",
+    "jusibe": "^0.2.0",
     "method-override": "^2.3.7"
   }
 }
