--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "jasmine tests/tests.js",
     "start": "node main.js"
   },
+  "engines": {
+    "node": "4.1.1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/COOPROTON/bc-18-maintenance-tracker.git"
