--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node main.js"
   },
   "engines": {
-    "node": "4.1.1"
+    "node": "6.9.3",
+    "npm": "3.10.10"
   },
   "repository": {
     "type": "git",
